Image border box-shadow

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Portfolio</title>
@@ -14,7 +14,6 @@
 <body>
     <div class="main_class">
         <div class="menu_vertical_bar">
-            <div class="vl"></div>
             <ul class="menu_items_list">
                 <li>Home</li>
                 <li>About</li>
@@ -23,7 +22,27 @@
                 <li>Services</li>
                 <li>Contact</li>
             </ul>
-            <div class="vl_end"></div>
+        </div>
+        <div class="profile">
+            <div class="profile-card">
+                <div class="profile-card-header">
+                    <div class="profile-image"></div>
+
+                    <div class="profile-info">
+                        <h3 class="profile-name">Sagar Hasan</h3>
+                        <p class="profile-desc">I'm Student.</p>
+                    </div>
+                </div>
+
+                <div class="profile-card-body">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-linkedin"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                </div>
+            </div>
+
         </div>
     </div>
 
