black version index page

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 <body>
     <div class="main_class">
         <div class="menu_vertical_bar">
-            <ul class="menu_items_list">
-                <li>Home</li>
-                <li>About</li>
-                <li>Resume</li>
-                <li>Portfolio</li>
-                <li>Services</li>
-                <li>Contact</li>
-            </ul>
+            <a id="li" href="#">Home</a>
+            <a href="#" id="li">About</a>
+            <a href="#" id="li">Resume</a>
+            <a href="#" id="li">Portfolio</a>
+            <a href="#" id="li">Services</a>
+            <a href="#" id="li">Contact</a>
+
         </div>
         <div class="profile">
             <div class="profile-card">
@@ -35,17 +34,19 @@
                 </div>
 
                 <div class="profile-card-body">
-                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="https://www.linkedin.com/in/sagar-hasan-677b5b1ba/" class="fa fa-linkedin" target="_blank"></a>
+                    <a href="https://github.com/sagarhasan273" class="fa fa-github" target="_blank"></a>
+                    <a href="https://leetcode.com/sagarhasan273/" class="fa fa-leetcode" target="_blank"><img src="photos/leetcode.svg" alt=""></a>
+                    <a href="https://www.facebook.com/sagar.hasan.273/" class="fa fa-facebook" target="_blank"></a>
                     <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-linkedin"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-                    <a href="#" class="fa fa-instagram"></a>
                 </div>
             </div>
 
         </div>
     </div>
-
+    <div class="footer">
+        <p>Designed by Sagar Hasan. 2022</p>
+    </div>
 
 
 </body>
