black version index page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>Designed by Sagar Hasan. 2022</p>
+        <p>Designed by Sagar Hasan || Email: sagar15-2968@diu.edu.bd || Contact no. +8801941717226 || Year2022</p>
     </div>
 
 
