--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <div class="main_class">
         <div class="menu_vertical_bar">
-            <a id="li" href="#">Home</a>
-            <a href="#" id="li">About</a>
-            <a href="#" id="li">Resume</a>
-            <a href="#" id="li">Portfolio</a>
-            <a href="#" id="li">Services</a>
-            <a href="#" id="li">Contact</a>
+            <a id="li" href="home/home.html" target="_blank">Home</a>
+            <a href="#" id="li" target="_blank">About</a>
+            <a href="#" id="li" target="_blank">Resume</a>
+            <a href="#" id="li" target="_blank">Portfolio</a>
+            <a href="#" id="li" target="_blank">Services</a>
+            <a href="#" id="li" target="_blank">Contact</a>
 
         </div>
         <div class="profile">
@@ -47,8 +47,6 @@
     <div class="footer">
         <p>Designed by Sagar Hasan || Email: sagar15-2968@diu.edu.bd || Contact no. +8801941717226 || Year2022</p>
     </div>
-
-
 </body>
 
 </html>
