--- a/About/about.html
+++ b/About/about.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="../nav_bar.css">
     <link rel="stylesheet" href="../nav_bar.js">
-    <title>Home</title>
-
+    <title>About</title>
 </head>
 
 <body>
@@ -19,14 +19,14 @@
             <li id="li_left" class="nav-item"><a href="../Service/service.html">Services</a></li>
             <li id="li_left" class="nav-item"><a href="../Portfolio/portfolio.html">Portfolio</a></li>
             <li id="li_left" class="nav-item"><a href="../Resume/resume.html">Resume</a></li>
-            <li id="li_left" class="nav-item"><a href="../About/about.html">About</a></li>
-            <li id="li_left" class="nav-item active"><a href="../home/home.html">Home</a></li>
+            <li id="li_left" class="nav-item active"><a href="../About/about.html">About</a></li>
+            <li id="li_left" class="nav-item"><a href="../home/home.html">Home</a></li>
         </ul>
     </div>
 
-    <div class="home_body">
-        <h1>This is Home</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam necessitatibus impedit expedita unde consectetur placeat aut ratione ad ab et, debitis mollitia beatae recusandae aspernatur magni vel. Voluptates, natus! Cumque?</p>
+    <div class="about_body">
+        <h1>This is About</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur vitae alias ab veniam voluptatibus nesciunt, corporis perferendis fuga quaerat recusandae quae qui reiciendis natus dignissimos error dolores possimus sunt nobis.</p>
     </div>
 </body>
 
