--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <div class="main_class">
         <div class="menu_vertical_bar">
-            <a id="li" href="home/home.html" target="_blank">Home</a>
-            <a href="#" id="li" target="_blank">About</a>
-            <a href="#" id="li" target="_blank">Resume</a>
-            <a href="#" id="li" target="_blank">Portfolio</a>
-            <a href="#" id="li" target="_blank">Services</a>
-            <a href="#" id="li" target="_blank">Contact</a>
+            <a id="li" href="home/index.html#home">Home</a>
+            <a href="home/index.html#about" id="li">About</a>
+            <a href="home/index.html#resume" id="li">Resume</a>
+            <a href="home/index.html#portfolio" id="li">Portfolio</a>
+            <a href="home/index.html#services" id="li">Services</a>
+            <a href="home/index.html#contact" id="li">Contact</a>
 
         </div>
         <div class="profile">
