--- a/home/index.html
+++ b/home/index.html
@@ -27,7 +27,6 @@
         </ul>
     </div>
 
-    <!-- main banner -->
     <section class="bgimage" id="home">
         <div class="container-fluid">
             <div class="row">
@@ -39,13 +38,12 @@
         </div>
     </section>
 
-    <!-- about section-->
     <section id="about">
         <div class="container mt-4 pt-4">
             <h1 class="text-center">About Me</h1>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="images/about.jpeg" class="imageAboutPage" alt="">
+                    <img src="../photos/IMG_9772.jpg" class="imageAboutPage" alt="">
                 </div>
 
                 <div class="col-lg-8">
@@ -80,7 +78,6 @@
             </div>
     </section>
 
-    <!-- portfolio section-->
     <section id="portfolio">
         <div class="container mt-3">
             <h1 class="text-center">Portfolio</h1>
@@ -167,7 +164,6 @@
             </div>
     </section>
 
-    <!-- services section-->
     <section id="services">
         <div class="container">
             <h1 class="text-center">Services</h1>
@@ -242,7 +238,6 @@
         </div>
     </section>
 
-    <!-- contact section-->
     <section id="contact">
         <div class="container mt-3 contactContent">
             <h1 class="text-center">Contact Me</h1>
